fix blank spaces on mobile

--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -887,13 +887,16 @@ section.collab
 	+above($desktop)
 		flexbox()
 		align-items center
+	+below($desktop)
+		min-height initial
 	.wrap
 		col(9/12)
 		margin 0
 		margin-top 60px
 		+below($desktop)
 			stack()
-			padding 20% 0
+			padding-top 20%
+			min-height initial
 	.link
 		cursor url('../images/pen.png') 17 17, default
 	form
@@ -939,6 +942,7 @@ section.contact
 		flexbox()
 		align-items center
 	+below($desktop)
+		min-height initial
 		margin-bottom 50px
 	a[href='mailto:studio@maisonnue.com']
 		font-family "PL"
